@@ -1,0 +1,11 @@
+CORE
+verilog1.v
+--smv-word-level
+^MODULE main$
+^VAR x : unsigned word\[32\];$
+^INIT main\.x = 0ud32_0$
+^INVAR Verilog::main\.x_aux0 = main\.x \+ 0ud32_1$
+^TRANS next\(main\.x\) = Verilog::main\.x_aux0$
+^EXIT=0$
+^SIGNAL=0$
+--
