@@ -44,7 +44,8 @@ public:
         "(smt2)(bitwuzla)(boolector)(cvc3)(cvc4)(cvc5)(mathsat)(yices)(z3)"
         "(minisat)(cadical)"
         "(aig)(stop-induction)(stop-minimize)(start):(coverage)(naive)"
-        "(compute-ct)(dot-netlist)(smv-netlist)(vcd):"
+        "(compute-ct)(dot-netlist)(smv-netlist)(smv-word-level)"
+        "(vcd):"
         "(random-traces)(trace-steps):(random-seed):(traces):"
         "(random-trace)(random-waveform)"
         "(bmc-with-assumptions)"
