@@ -8,5 +8,7 @@ Author: Daniel Kroening, kroening@kroening.com
 
 #include <util/expr.h>
 
-bool expr2smv(const exprt &, std::string &code, const namespacet &);
-bool type2smv(const typet &, std::string &code, const namespacet &);
+class namespacet;
+
+std::string expr2smv(const exprt &, const namespacet &);
+std::string type2smv(const typet &, const namespacet &);
